# cl-MDS

./: pyproject.toml
cl_MDS/: cluster_mds.py  sparsify_module.py
cl_MDS/examples/: comparison_S_manifold.py  example_S_manifold.py  example_gruyere.py  example_hypersphere.py
cl_MDS/examples/tutorial_atoms_file/: example_atoms_advanced.py  example_atoms_simple.py  example_dist_matrix.py  fast_demo.py
cl_MDS/tests/: test_coord.py
